[project]
name = "AsyncBot"
version = "0.1.0"
description = "AsyncBot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]

[tool.poetry]
name = "AsyncBot"
version = "0.1.0"
description = "AsyncBot"
authors = ["dsx137"]
license = "OSLv3"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
cohere = "^5.11.0"
nb-cli = "^1.4.2"
